[package]
name = "terminal-tty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
libc = "0.2.141"
mio = { version = "0.8.6", features = ["os-ext"] }
nix = "0.26.2"
signal-hook = "0.3.15"
signal-hook-mio = { version = "0.2.3", features = ["mio-0_8", "support-v0_8"] }
terminal-common = { version = "0.1.0", path = "../terminal-common" }
